some text changes and fixes

--- a/apartment-management-system/ApartmentManagement.Web/Views/Shared/_Layout.cshtml
+++ b/apartment-management-system/ApartmentManagement.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 								<a class="nav-link text-dark" asp-area="" asp-controller="Apartment" asp-action="Index">Daireler</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Apartmen Sakinleri</a>
+								<a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Apartman Sakinleri</a>
 							</li>
 
 							<li class="nav-item">
