--- a/apartment-management-system/ApartmentManagement.Web/Views/User/Index.cshtml
+++ b/apartment-management-system/ApartmentManagement.Web/Views/User/Index.cshtml
@@ -15,7 +15,7 @@
 	<br /><br />
 	@if(TempData["password"] != null){
 		<div class="alert alert-info" role="alert">
-			Yeni eklediğiniz apartman sakini şifresini iletmeyi unutmayın! @TempData["password"]
+			Yeni eklediğiniz apartman sakini şifresini iletmeyi unutmayın:@TempData["password"]
 		</div>
 	}
 	
